@@ -23,6 +23,8 @@ Bug: Dropping first box on Heightfield is wrong.
 
 0.5.0 (unreleased)
 =====
+- Added factory methods and missing API for DRagdoll, DConstrainedBallJoint and DTrimeshHeightfield.
+  [#24](https://github.com/tzaeschke/ode4j/issues/24)
 - Removed linter warnings when compiling with Java 17. [#116](https://github.com/tzaeschke/ode4j/pull/116)
 - DVector3C.cross(). [#115](https://github.com/tzaeschke/ode4j/pull/115)
 - DVector3.toDoubleArray(), fromDoubleArray(), fromFloatArray(). [#114](https://github.com/tzaeschke/ode4j/pull/114)
